# paper-element-yolo

./: README.md  pyproject.toml
notebooks/: tutorial.ipynb
notebooks/TFT-ID-1/: README.dataset.txt  README.roboflow.txt  data.yaml
notebooks/TFT-ID-1/test/labels/: arxiv_2305_02549_6_png.rf.c076d77f1864eed72b81f14c6ffae5a5.txt  arxiv_2305_02665_4_png.rf.c88c1cf5abd35af11b2a08fc179b650c.txt  arxiv_2305_03027_page_9_png.rf.3879f87b64c4184168d4a4d3fdfcd201.txt  arxiv_2305_03937_page_7_png.rf.4caf6ab033b4c0c82d05fca0a5308457.txt  arxiv_2305_03981_7_png.rf.e8d001cbe005bfd0b7aacadbeefe47a5.txt
notebooks/TFT-ID-1/train/: labels.cache
notebooks/TFT-ID-1/train/labels/: arxiv_2305_02412_2_png.rf.8d3e2a32eab757f7628c8ed4fced431a.txt  arxiv_2305_02440_page_5_png.rf.026fe404bd1027793ff5967c7e6253a3.txt  arxiv_2305_02549_1_png.rf.475f8fe781e13e6e149e5a23b33b60bb.txt  arxiv_2305_02549_4_png.rf.aa425b928ad166b760626a2a8c229b89.txt  arxiv_2305_02665_3_png.rf.9f9988cce5b0218cb6b07af32d345063.txt  arxiv_2305_02678_page_7_png.rf.737ee636c9f67076d30d276ca1f365b4.txt  arxiv_2305_03040_page_3_png.rf.f89ce65ca83b0a542e6e09de6b3b7dcf.txt  arxiv_2305_03040_page_7_png.rf.c1b5db4ca874141dc6c59bf6b1989677.txt  arxiv_2305_03047_page_10_png.rf.2771972815a97e1dbc9a5cc01a243fc0.txt  arxiv_2305_03048_page_2_png.rf.dda37533b28c2403babfd31ddabfdbb7.txt  arxiv_2305_03210_page_9_png.rf.31232af9bb802c6d34b5c8d6fd5a362a.txt  arxiv_2305_03981_0_png.rf.a26e6aa8552ef79abd1113a83a25a108.txt  arxiv_2305_03981_1_png.rf.adba788efa6ea255467ab3072dd37d38.txt  (+22 more)
notebooks/TFT-ID-1/valid/: labels.cache
(+17 files in other folders)
